Alt pag de preço

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
     "></div>
     
     <div style="position: relative; z-index: 2;">
-      <div style="font-size: 0.9rem; margin-bottom: 5px;">
-        ⏳ <strong>OFERTA COM DESCONTO DE 50% - APENAS R$24,90!</strong>
+      <div style="font-size: 1.2rem; margin-bottom: 5px;">
+        ⏳ <strong>OFERTA COM DESCONTO DE 50%!</strong>
       </div>
       <div id="countdown" style="
           font-size: 1.5rem;
@@ -391,6 +391,12 @@
     </p>
   </div>
   <!-- FIM DA GARANTIA -->
+
+  <!-- Valor do produto destacado -->
+<div style="background: #fffbe7; color: #b85c00; font-size: 1.5rem; font-weight: bold; border-radius: 14px; padding: 18px 0; margin: 30px auto 10px auto; max-width: 350px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center; border: 2px solid #ffe2a0;">
+  🎉 <span style="font-size:1.2rem;">De <s>R$49,90</s> por apenas</span><br>
+  <span style="font-size:2.1rem; color:#ff6b00;">R$24,90</span>
+</div>
 
   <!-- Botão de checkout -->
   <div style="text-align: center; margin-top: 20px;">
