--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   background: var(--rosa);
 }
   </style>
-  
+
     <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -197,7 +197,6 @@
 </noscript>
 <!-- End Meta Pixel Code -->
 
-
 </head>
 <body>
 
@@ -207,102 +206,114 @@
 </div>
 
 <div id="q1" class="quiz-container active">
-  <h2>Qual dessas memórias te traz mais saudade da infância?</h2>
-  <a class="option" onclick="nextQuestion('q2')">Comer sobremesa com a família aos domingos</a>
-  <a class="option" onclick="nextQuestion('q2')">Aquele cheirinho gostoso vindo da cozinha</a>
-  <a class="option" onclick="nextQuestion('q2')">As risadas ao redor da mesa</a>
-  <a class="option" onclick="nextQuestion('q2')">A culinária da vó ou da mãe</a>
+  <h2>O que mais te irrita quando tenta fazer sorvete em casa?</h2>
+  <a class="option" onclick="nextQuestion('q2')">Ficar duro demais, impossível de servir</a>
+  <a class="option" onclick="nextQuestion('q2')">Ficar com gosto forte de leite condensado</a>
+  <a class="option" onclick="nextQuestion('q2')">Ficar doce demais e enjoativo</a>
+  <a class="option" onclick="nextQuestion('q2')">Não parecer nem de longe com o de sorveteria</a>
 </div>
 
 <div id="q2" class="quiz-container">
-  <h2>Se você pudesse criar uma nova tradição familiar, o que ela incluiria?</h2>
-  <a class="option" onclick="nextQuestion('narrativa1')">Preparar receitas juntos nos finais de semana</a>
-  <a class="option" onclick="nextQuestion('narrativa1')">Ter uma sobremesa especial feita em casa</a>
-  <a class="option" onclick="nextQuestion('narrativa1')">Ensinar os filhos a cozinhar</a>
-  <a class="option" onclick="nextQuestion('narrativa1')">Reunir todos para momentos especiais à mesa</a>
+  <h2>Como você gostaria de se sentir ao acertar uma receita de sorvete?</h2>
+  <a class="option" onclick="nextQuestion('narrativa1')">Confiante por finalmente acertar a textura</a>
+  <a class="option" onclick="nextQuestion('narrativa1')">Aliviado por não desperdiçar ingredientes</a>
+  <a class="option" onclick="nextQuestion('narrativa1')">Feliz por fazer algo com sabor profissional</a>
+  <a class="option" onclick="nextQuestion('narrativa1')">Com vontade de testar vários novos sabores</a>
 </div>
 
 <div id="narrativa1" class="quiz-container">
-  <h2>Você consegue imaginar a cena?</h2>
-  <img src="images/fotonarrativa1.jpg" alt="Família reunida com sorvete" style="display:block; margin:0 auto 22px auto; max-width:260px; border-radius:14px; box-shadow:0 4px 12px rgba(0,0,0,0.10);" />
+  <h2>🧊 Fazer sorvete em casa não precisa ser um tiro no escuro.</h2>
+  <img src="images/pessoa3.png" alt="Pessoa feliz com sorvete caseiro perfeito" style="display:block; margin:0 auto 22px auto; max-width:200px; border-radius:14px; box-shadow:0 4px 12px rgba(0,0,0,0.10);" />
   <p>
-    As <strong>lembranças</strong> mais marcantes da infância e os momentos que sonhamos viver em família têm algo em comum: eles nascem de experiências simples, mas cheias de afeto.
+    Chega de receitas que parecem promissoras e viram decepção no freezer.
   </p>
   <p>
-    E se uma receita pudesse se <strong>transformar</strong> em um ritual gostoso, esperado por todos, semana após semana?
+    Você <strong>PRECISA</strong> conseguir fazer uma receita que funciona e que fique como o de uma sorveteria — de verdade.
   </p>
   <p>
-    Criar tradições não precisa ser complicado — pode começar com um sabor, um gesto, um <strong>momento</strong> só de vocês.
+    <strong>Chega de perder</strong> tempo, dinheiro e ingredientes tentando receitas aleatórias da internet.
   </p>
   <a class="option" onclick="nextQuestion('q3')">Me mostra como!</a>
 </div>
 
 <div id="q3" class="quiz-container">
-  <h2>Sendo assim, como você se sentiria ao ver sua família pedindo aquele seu sorvete especial toda semana?</h2>
-  <a class="option" onclick="nextQuestion('q4')">Orgulhosa por fazer algo delicioso</a>
-  <a class="option" onclick="nextQuestion('q4')">Feliz por unir a família ao redor da mesa</a>
-  <a class="option" onclick="nextQuestion('q4')">Realizado(a) por criar momentos únicos</a>
-  <a class="option" onclick="nextQuestion('q4')">Com vontade de experimentar novos sabores</a>
+  <h2>Qual dessas conquistas te deixaria mais satisfeito ao fazer seu próprio sorvete?</h2>
+  <a class="option" onclick="nextQuestion('q4')">Conseguir um sorvete cremoso sem erro</a>
+  <a class="option" onclick="nextQuestion('q4')">Dominar uma receita que todos elogiam</a>
+  <a class="option" onclick="nextQuestion('q4')">Ter um resultado que parece de sorveteria</a>
+  <a class="option" onclick="nextQuestion('q4')">Parar de depender de receitas aleatórias da internet</a>
 </div>
 
 <div id="q4" class="quiz-container">
-  <h2>Você gostaria de ter acesso as receitas de sorvetes caseiros que encantam a todos e podem virar uma tradição na sua casa?</h2>
-  <a class="option" onclick="nextQuestion('q5')">Sim, com certeza!</a>
-  <a class="option" onclick="nextQuestion('q5')">Claro, adoro fazer receitas especiais</a>
-  <a class="option" onclick="nextQuestion('q5')">Talvez, se forem fáceis e gostosas</a>
-  <a class="option" onclick="nextQuestion('q5')">Não tenho certeza (mas fiquei curioso)</a>
+  <h2>E se existisse um passo a passo prático, sem enrolação, que evita todos esses erros de uma vez por todas?</h2>
+  <a class="option" onclick="nextQuestion('q5')">Quero agora! Era tudo o que eu precisava</a>
+  <a class="option" onclick="nextQuestion('q5')">Sim! Estou cansado de tentar e errar</a>
+  <a class="option" onclick="nextQuestion('q5')">Talvez, se for simples mesmo</a>
+  <a class="option" onclick="nextQuestion('q5')">Fiquei curioso... será que funciona?</a>
 </div>
 
 <div id="q5" class="quiz-container">
-  <h2>Então vou te mostrar receitas que podem ser feitas em casa, de forma fácil, rápida e sem precisar de muito. Mas por dúvida, o que você teria aí na sua casa?</h2>
-  <a class="option" onclick="nextQuestion('final')">Tenho sorveteira</a>
-  <a class="option" onclick="nextQuestion('final')">Só liquidificador</a>
-  <a class="option" onclick="nextQuestion('final')">Geladeira + força de vontade</a>
-  <a class="option" onclick="nextQuestion('final')">Pretendo comprar equipamentos</a>
+  <h2>Pra te mostrar o caminho mais direto, me diz: o que você tem aí na sua cozinha?</h2>
+  <a class="option" onclick="nextQuestion('final')">Tenho sorveteira (já tentei de tudo!)</a>
+  <a class="option" onclick="nextQuestion('final')">Só liquidificador e paciência</a>
+  <a class="option" onclick="nextQuestion('final')">Geladeira e esperança</a>
+  <a class="option" onclick="nextQuestion('final')">Ainda estou me organizando, mas quero começar</a>
 </div>
 
 <div id="final" class="quiz-container final">
-  <!-- Container flex para imagem e primeiro parágrafo -->
-  <div class="final-flex" style="display: flex; flex-wrap: wrap; gap: 30px; margin-bottom: 20px;">
+  <!-- Container flex para imagem e texto introdutório -->
+  <div class="final-flex" style="display: flex; flex-wrap: wrap; gap: 30px; margin-bottom: 25px; align-items: center;">
     <!-- Imagem à esquerda -->
     <div style="flex: 0 0 40%; max-width: 250px;">
-      <img src="images/pessoa.png" alt="Família feliz com sorvete" style="width: 100%; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+      <img src="images/pessoa2.png" alt="Sorvete caseiro perfeito" style="width: 100%; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
     </div>
-    <!-- Primeiro parágrafo à direita -->
+    <!-- Texto à direita -->
     <div style="flex: 1;">
-      <p style="font-size: 1rem; line-height: 1.6; margin-top: 0;">
-        <strong>"Eu também queria mais do que só uma sobremesa..."</strong>
+      <p style="font-size: 1.1rem; line-height: 1.6; margin-top: 0;">
+        <strong>"Chega de tentativas frustradas!"</strong>
       </p>
-      <p style="line-height: 1.6;">Quando comecei a fazer sorvetes em casa, meu maior desejo era ver minha família reunida, sorrindo, criando memórias simples — mas marcantes. Foi nesse momento que percebi que receitas podem ir muito além do sabor. Elas criam <strong>conexão, acolhimento e afeto</strong>.</p>
+      <p style="line-height: 1.6;">
+        Depois de <strong>47 receitas testadas</strong> e incontáveis frustrações no freezer, descobri o método que transforma ingredientes simples em sorvete <strong>cremoso, no ponto certo</strong> - exatamente como você merece.
+      </p>
     </div>
   </div>
-  <!-- Transição suave com perguntas reflexivas -->
-  <p style="line-height: 1.6; margin-bottom: 20px;">
-    E você? Já sentiu aquele <strong>calor no coração</strong> ao ver alguém elogiando um doce que você preparou? Ou a <strong>vontade de transformar</strong> um dia comum em algo especial, mesmo sem muito tempo ou ingredientes complicados?
-  </p>
-  <!-- Apresentação do eBook como solução natural -->
-  <p style="line-height: 1.6;">
-    Foi pensando em <strong>todos esses sentimentos</strong> que criei o <strong>Sorvete sem Segredo</strong>: um eBook feito para ajudar você a transformar sua cozinha em um <strong>cantinho de memórias doces</strong>, sem precisar de experiência ou equipamentos caros.
-  </p>
-  <div style="margin: 25px 0; padding: 20px; background: var(--menta); border-radius: 14px; line-height: 1.8;">
-      <p>🍦 <strong>Receitas simples, práticas e testadas para qualquer nível.</strong></p>
-      <p>👨‍👩‍👧‍👦 <strong>Inspiração para criar momentos especiais em família.</strong></p>
-      <p>⏱️ <strong>Preparo rápido com poucos ingredientes.</strong></p>
-      <p>❄️ <strong>Funciona com ou sem sorveteira.</strong></p>
+
+  <!-- Destaque dos problemas resolvidos -->
+  <div style="background: #FFF8F5; padding: 20px; border-radius: 14px; margin: 25px 0; border-left: 4px solid #FF6B4A;">
+    <p style="line-height: 1.6; margin: 0;">
+      ❌ <strong>Nunca mais</strong>: Sorvete duro como pedra<br>
+      ❌ <strong>Chega</strong>: Gosto artificial de leite condensado<br>
+      ❌ <strong>Fim</strong>: Textura granulada ou aquosa<br>
+      ✅ <strong>Só</strong>: Resultado profissional na sua cozinha
+    </p>
+  </div>
+
+  <!-- O que o usuário vai receber -->
+  <h3 style="margin: 30px 0 15px; text-align: center; color: #E74C3C;">
+    O que você vai dominar com o <strong>Método Sorvete Sem Segredo</strong>:
+  </h3>
+
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-bottom: 30px;">
+    <div style="background: #F9F9F9; padding: 18px; border-radius: 12px;">
+      <p style="margin: 0 0 10px; font-weight: bold;">🥄 <strong>O Segredo da Cremosidade</strong></p>
+      <p style="margin: 0; font-size: 0.9rem;">A proporção exata de ingredientes para textura perfeita (sem aditivos!)</p>
     </div>
-  <!-- Conclusão emocional -->
-  <p style="line-height: 1.6;">
-    Se você chegou até aqui, é porque também acredita que <strong>os melhores dias</strong> são feitos de pequenas alegrias — e eu quero te ajudar a criá-las. Não é preciso ser um chef, só alguém que, como eu, entende que <strong>o sorvete é só a desculpa</strong>... o verdadeiro sabor está no <strong>tempo compartilhado</strong>.
-  </p>
-  <p style="text-align: center; font-size: 1.2rem; margin: 30px 0 20px;">
-    💛 <strong>Vamos começar essa doce jornada?</strong>
-  </p>
-  <!-- Depoimentos dos clientes -->
+    <div style="background: #F9F9F9; padding: 18px; border-radius: 12px;">
+      <p style="margin: 0 0 10px; font-weight: bold;">⏱️ <strong>Tempo Zero de Espera</strong></p>
+      <p style="margin: 0; font-size: 0.9rem;">Como servir direto do freezer sem precisar descongelar</p>
+    </div>
+    <div style="background: #F9F9F9; padding: 18px; border-radius: 12px;">
+      <p style="margin: 0 0 10px; font-weight: bold;">🧂 <strong>Balanceamento Perfeito</strong></p>
+      <p style="margin: 0; font-size: 0.9rem;">O truque para reduzir a doçura sem perder sabor</p>
+    </div>
+  </div>
+
+ <!-- Depoimentos dos clientes -->
   <div style="text-align: center; font-size: 0.93rem; color: #888; margin-bottom: 6px;">
     <span style="font-size: 0.93rem;">Clique em uma foto para ler o depoimento</span>
   </div>
   <div id="depoimentos" style="display: flex; justify-content: center; gap: 12px; margin-bottom: 24px;">
-    <div class="depo-square" data-msg="O melhor eBook de receitas que já comprei! Minha família amou. 💖 — Ana">
+    <div class="depo-square" data-msg="Meu marido trabalha na sorveteria aprovou MUITO esse livro de receitas! 💖 — Ana">
       <img src="images/cliente1.png" alt="Ana" style="width:40px; height:40px; border-radius:10px;">
     </div>
     <div class="depo-square" data-msg="Fiz sorvete sem sorveteira e ficou perfeito! Recomendo demais. 🍦 — João">
@@ -332,6 +343,9 @@
     <span onclick="document.getElementById('depo-balao').style.display='none'" style="position:absolute;top:8px;right:14px;cursor:pointer;font-weight:bold;">×</span>
   </div>
 
+  <!-- CTA Urgente -->
+  <div style="text-align: center; margin: 40px 0 20px;">
+    <h3 style="margin-bottom: 15px;">Quanto vale para você nunca mais desperdiçar ingredientes?</h3>
   <!-- TIMER DA OFERTA -->
   <div id="offer-timer" style="
       background: linear-gradient(135deg, var(--rosa) 0%, #ff6b6b 100%);
@@ -383,6 +397,12 @@
   </div>
   <!-- FIM DO TIMER -->
 
+    <!-- Valor do produto destacado -->
+<div style="background: #fffbe7; color: #b85c00; font-size: 1.5rem; font-weight: bold; border-radius: 14px; padding: 18px 0; margin: 30px auto 10px auto; max-width: 350px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center; border: 2px solid #ffe2a0;">
+  🎉 <span style="font-size:1.2rem;">De <s>R$49,90</s> por apenas</span><br>
+  <span style="font-size:2.1rem; color:#ff6b00;">R$24,90</span>
+</div>
+
   <!-- GARANTIA DE 7 DIAS -->
   <div style="background: #fff8f0; border: 2px dashed #f4b183; padding: 20px; border-radius: 16px; margin-top: 30px; text-align: center; box-shadow: 0 0 8px rgba(0,0,0,0.03);">
     <p style="font-size: 1rem; color: #7a4e27; margin: 0;">
@@ -392,17 +412,16 @@
   </div>
   <!-- FIM DA GARANTIA -->
 
-  <!-- Valor do produto destacado -->
-<div style="background: #fffbe7; color: #b85c00; font-size: 1.5rem; font-weight: bold; border-radius: 14px; padding: 18px 0; margin: 30px auto 10px auto; max-width: 350px; box-shadow: 0 2px 12px rgba(0,0,0,0.06); text-align: center; border: 2px solid #ffe2a0;">
-  🎉 <span style="font-size:1.2rem;">De <s>R$49,90</s> por apenas</span><br>
-  <span style="font-size:2.1rem; color:#ff6b00;">R$24,90</span>
-</div>
+    <a href="#" style="display: inline-block; background: #E74C3C; color: white; padding: 15px 30px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; box-shadow: 0 4px 12px rgba(231, 76, 60, 0.3); margin-top:20px;">
+      QUERO MEU SORVETE PERFEITO AGORA!
+    </a>
+    <p style="font-size: 0.8rem; margin-top: 15px;">
+      ⚡ Acesso imediato via e-mail | 📱 100% digital
+    </p>
+  </div>
 
   <!-- Botão de checkout -->
   <div style="text-align: center; margin-top: 20px;">
-        <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank">
-          👉 Garantir meu eBook com desconto agora!
-        </a>
           <img src="images/socialproof.png" alt="Pessoas que já compraram" style="max-width: 320px; width: 100%" />
       </div>
     </div>
