--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
   </div>
   <!-- FIM DA GARANTIA -->
 
-    <a href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" style="display: inline-block; background: #E74C3C; color: white; padding: 15px 30px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; box-shadow: 0 4px 12px rgba(231, 76, 60, 0.3); margin-top:20px;">
-      QUERO MEU SORVETE PERFEITO AGORA!
+    <a class="checkout-button" href="https://pay.kirvano.com/9aa58506-88d8-4680-93c5-42ddfb8b024f" target="_blank" style="display: inline-block; background: #E74C3C; color: white; padding: 15px 30px; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.1rem; box-shadow: 0 4px 12px rgba(231, 76, 60, 0.3); margin-top:20px;">
+      QUERO MEU SORVETE AGORA!
     </a>
     <p style="font-size: 0.8rem; margin-top: 15px;">
       ⚡ Acesso imediato via e-mail | 📱 100% digital
