Tam imagem intro

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <h2>Tenho CERTEZA: a partir de hoje você nunca mais vai errar no sorvete!</h2>  
 
   <div style="text-align: center; margin: 30px auto;">
-    <img src="images/intro.png" alt="Sorvete Caseiro Perfeito" style="max-width: 500px; border-radius: 12px;" />
+    <img src="images/intro.png" alt="Sorvete Caseiro Perfeito" style="width: 100%; border-radius: 12px;" />
   </div>
 
   <p style="text-align: center; margin-bottom: 25px; line-height: 1.6; font-size: 1.1rem;">
