--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
 <div id="intro" class="quiz-container active">
   <div style="text-align: center; margin: 30px auto;">
-    <img src="images/intro2.gif" alt="Sorvete Caseiro Perfeito" style="width: 80%; border-radius: 12px;" />
+    <img src="images/intro3.mp4" alt="Sorvete Caseiro Perfeito" style="width: 80%; border-radius: 12px;" />
   </div>
 
   <a class="option" onclick="nextQuestion('q1')" style="background: var(--rosa); font-size: 1.0rem; padding: 20px;">
